updated application.yml and build.gradle

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -54,6 +54,9 @@ management:
       exposure:
         include: info, health, refresh, shutdown, gateway
 
+app:
+  allowedOrigins: ${ALLOWED_ORIGINS}
+
 # Logging properties
 logging:
   level:
