--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,7 @@ management:
 
 app:
   allowedOrigins: ${ALLOWED_ORIGINS}
+  accessTokenSecret: ${ACCESS_TOKEN_SECRET}
 
 # Logging properties
 logging:
